<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.info.legal.TermsOfServiceActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_terms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_terms">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_pp_header_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#DAD8D8"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="Terms and Conditions"
                android:textSize="28sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_desc_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_one"
                android:textSize="14sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_pp_header_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_header_two"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_header_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_two"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_desc_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_three"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_header_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_header_four"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_desc_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_four"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_header_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_header_five"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_desc_five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_five"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_header_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_header_six"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_desc_six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_six"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_header_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_header_seven"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_desc_seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_seven"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_header_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_header_eight"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_desc_eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_eight"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_header_nine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_header_nine"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_pp_desc_nine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_nine"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_pp_desc_ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/txt_pp_desc_ten"
                android:textSize="14sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>